package com.unidates.Unidates.UniDates.DTOs;

public class CommunityManagerDTO extends ModeratoreDTO{

}
